Fix diff line highlight background color in dark mode

--- a/app/javascript/stylesheets/colors.css
+++ b/app/javascript/stylesheets/colors.css
@@ -35,7 +35,9 @@
   --alert-text-color: black;
 
   --chart-background-color: #dcdcdc;
-  --chart-border-color: rgb(220,220,220)
+  --chart-border-color: rgb(220,220,220);
+
+  --highlight-background-color: #ffc;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -65,5 +67,7 @@
 
     --list-option-background-color-gradient-1: #111;
     --list-option-background-color-gradient-2: #222222;
+
+    --highlight-background-color: #550;
   }    
 }
