--- a/app/javascript/stylesheets/diff.css
+++ b/app/javascript/stylesheets/diff.css
@@ -37,3 +37,6 @@
 .diff {
   border: 2px solid var(--content-border-color);
 }
+.diff li:hover{
+  background: var(--highlight-background-color);
+}
